maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:103: error: ':' expected but ',' found.
def aMurEst(x,y){
             ^JediEscaper:129: error: identifier expected but '}' found.
}
^