maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  
// indication 0 sur biscuit
var xBiscuit=0
var yBiscuit=0
for(x<-0 to mondeLargeur()-1){
  for(y<-0 to mondeHauteur()-1){
    if(aBiscuit(x,y)){
      xBiscuit=x
      yBiscuit=y
      setIndication(xBiscuit,yBiscuit,0)
    }
  }
}

// autres indications
  
var i = 0
  
while(getIndication(getX(),getY())==9999){
  for(x<-0 to mondeLargeur()-1){
    for(y<-0 to mondeHauteur()-1){
      if(getIndication(x,y)==i){
        if(!aMurNord(x,y)){
          if(getIndication(x,y-1)==9999){
            setIndication(x,y-1,i+1)
          }
        }
        if(!aMurEst(x,y)){
          if(getIndication(x+1,y)==9999){
            setIndication(x+1,y,i+1)
          }
        }
        if(!aMurSud(x,y)){
          if(getIndication(x,y+1)==9999){
            setIndication(x,y+1,i+1)
          }
        }
        if(!aMurOuest(x,y)){
          if(getIndication(x,y-1)==9999){
            setIndication(x,y-1,i+1)
          }
        }        
    }
  }
}
  
}
  
  
// avance du buggle

t = Array[Direction](4)
t(0)=Direction.NORTH
t(1)=Direction.EAST 
t(2)=Direction.SOUTH  
t(3)=Direction.WEST 
var numCases=Array[Int](4)
  
  
while(!estSurBiscuit()){
  setDirection(t(0))
  if(!estFaceMur()){
  numCases(0)=getIndication(getX(),getY()-1)
  } else {
    numcases(0)=Integer.MAX_VALUE
  }
  setDirection(t(1))
  if(estFaceMur()==false){
    numCases(1)=getIndication(getX()+1,getY())
  } else {
    numcases(1)=Integer.MAX_VALUE
  }
  setDirection(t(2))
  if(!estFaceMur()){
  numCases(2)=getIndication(getX(),getY()+1)
  } else {
    numcases(2)=Integer.MAX_VALUE
  }
  setDirection(t(3))
  if(!estFaceMur()){
  numCases(3)=getIndication(getX()-1,getY())
  } else {
    numcases(3)=Integer.MAX_VALUE
  }
  var min=Integer.MAX_Value
  var indiceMin=5
  for(i<-0 to numCases.length-1){
    if (numCases(i)<min){
      min=numCases(i)
      indiceMin=i
    }
  }
  setDirection(t(indiceMin()))
  avance
}
}




def aMurEst(x,y){
  if (x==getMondeLargeur()-1){
    return true
  } else if(aMurOuest(x+1,y)){
    return true
  } else {
    return false
  }
}

def aMurSud(x,y){
  if (y==getMondeHauteur()-1){
    return true
  } else if(aMurNord(x,y+1)){
    return true
  } else {
    return false
  }
}
